add alt and icon

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>關於日出</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
@@ -26,10 +27,10 @@
                 <div class="header">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="img/logo-only-small.png" alt="">
+                            <img src="img/logo-only-small.png" alt="pic">
                         </a>
                         <a href="index.html">
-                            <img src="img/logo-name-small.png" alt="">
+                            <img src="img/logo-name-small.png" alt="pic">
                         </a>
                     </div>
                     <input type="checkbox" class="header-hb-swich" id="header-hb-swich">
@@ -64,8 +65,8 @@
                     <p>日出吉他 品牌從台灣扎根，致力於推廣新設計、打造獨有特色、建立精品形象。我們特別專注於個別系列的特色發展，每系列的烏克麗麗都有自己的系列故事；與推廣音樂生活化、自由與人情味。不僅僅是製琴，而是鑄入概念、鑄入理想，進而參與慈善公益、回饋社會，以音樂影響世界。</p>
                     <p>以台灣為設計基礎地，在中國與日本生產。在 Johnson Liao 的設計以及質量指導日本松永雄二先生的合作下產生。 旗下有品牌日出吉他 彩虹人烏克麗麗、日出吉他 Bird 彩虹鳥吉他、與AQUA烏克麗麗 。 日出吉他 依據專門的技術以及於樂器界多年的經驗，傾注熱情為您帶來世界上最好的樂器。</p>
                 </div>
-                <img src="img/logo-only-small.png" alt="">
-                <img src="img/logo-name-small.png" alt="">
+                <img src="img/logo-only-small.png" alt="pic">
+                <img src="img/logo-name-small.png" alt="pic">
             </div>
         </div>
 
@@ -73,17 +74,17 @@
     <section class="worker wrap">
         <h2 class="title-decoration">吉他職人</h2>
         <div class="worker-content-wrap">
-            <img src="img/guitar-amp.png" alt="">
-            <img src="img/guitar.png" alt="">
-            <img src="img/micro.png" alt="">
-            <img src="img/music-record.png" alt="">
-            <img src="img/subwoofer.png" alt="">
-            <img src="img/bugle.png" alt="">
+            <img src="img/guitar-amp.png" alt="pic">
+            <img src="img/guitar.png" alt="pic">
+            <img src="img/micro.png" alt="pic">
+            <img src="img/music-record.png" alt="pic">
+            <img src="img/subwoofer.png" alt="pic">
+            <img src="img/bugle.png" alt="pic">
             <div class="worker-content">
                 <div class="card">
                     <div class="card-content">
                         <div class="front">
-                            <img src="img/protrit.jpg" alt="">
+                            <img src="img/protrit.jpg" alt="pic">
                             <h3>Isabella Hall</h3>
                         </div>
                         <div class="back">
@@ -98,7 +99,7 @@
                 <div class="card">
                     <div class="card-content">
                         <div class="front">
-                            <img src="img/protrit2.jpg" alt="">
+                            <img src="img/protrit2.jpg" alt="pic">
                             <h3>Josia Jocobe</h3>
                         </div>
                         <div class="back">
@@ -113,7 +114,7 @@
                 <div class="card">
                     <div class="card-content">
                         <div class="front">
-                            <img src="img/portrit3.jpg" alt="">
+                            <img src="img/portrit3.jpg" alt="pic">
                             <h3>Hibah Hasan</h3>
                         </div>
                         <div class="back">
