--- a/cus-online.html
+++ b/cus-online.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>客製化吉他</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
@@ -26,10 +27,10 @@
                 <div class="header">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="img/logo-only-small.png" alt="">
+                            <img src="img/logo-only-small.png" alt="pic">
                         </a>
                         <a href="index.html">
-                            <img src="img/logo-name-small.png" alt="">
+                            <img src="img/logo-name-small.png" alt="pic">
                         </a>
                     </div>
                     <input type="checkbox" class="header-hb-swich" id="header-hb-swich">
@@ -80,8 +81,8 @@
                 </div>
             </div>
             <div class="cus-online-cus-demo">
-                <img src="img/guitar-big-trans.png" alt="">
-                <img src="img/cloud.jpg" alt="">
+                <img src="img/guitar-big-trans.png" alt="pic">
+                <img src="img/cloud.jpg" alt="pic">
             </div>
             <div class="guitar-shape">
                 <div class="shape-pic-txt">
@@ -111,7 +112,7 @@
         <div class="cus-online-info-content-wrap">
             <div class="cus-online-info-content">
                 <div class="cus-online-info-pic">
-                    <img src="img/001-shipping.png" alt="">
+                    <img src="img/001-shipping.png" alt="pic">
                 </div>
                 <div class="cus-online-info-txt">
                     <h2>安心快速的運送</h2>
@@ -120,7 +121,7 @@
             </div>
             <div class="cus-online-info-content">
                 <div class="cus-online-info-pic">
-                    <img src="img/diploma.png" alt="">
+                    <img src="img/diploma.png" alt="pic">
                 </div>
                 <div class="cus-online-info-txt">
                     <h2>高品質的用料</h2>
@@ -129,7 +130,7 @@
             </div>
             <div class="cus-online-info-content">
                 <div class="cus-online-info-pic">
-                    <img src="img/tools.png" alt="">
+                    <img src="img/tools.png" alt="pic">
                 </div>
                 <div class="cus-online-info-txt">
                     <h2>技術高超製作用心</h2>
