--- a/guitar-detail.html
+++ b/guitar-detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
@@ -24,10 +25,10 @@
                 <div class="header">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="img/logo-only-small.png" alt="">
+                            <img src="img/logo-only-small.png" alt="pic">
                         </a>
                         <a href="index.html">
-                            <img src="img/logo-name-small.png" alt="">
+                            <img src="img/logo-name-small.png" alt="pic">
                         </a>
                     </div>
                     <input type="checkbox" class="header-hb-swich" id="header-hb-swich">
@@ -50,7 +51,7 @@
     </div>
     <section class="guitar-info">
         <div class="guitar-info-pic">
-            <img src="img/guitar-big.jpg" alt="">
+            <img src="img/guitar-big.jpg" alt="pic">
             <div class="pic-small">
                 <img src="img/guitar-big.jpg" alt="front">
                 <img src="img/guitar-big-side.jpg" alt="side">
