--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>日出吉他</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
@@ -27,10 +29,10 @@
         <div class="header">
             <div class="logo">
                 <a href="index.html">
-                    <img src="img/logo-only-small.png" alt="">
+                    <img src="img/logo-only-small.png" alt="pic">
                 </a>
                 <a href="index.html">
-                    <img src="img/logo-name-small.png" alt="">
+                    <img src="img/logo-name-small.png" alt="pic">
                 </a>
             </div>
             <input type="checkbox" class="header-hb-swich" id="header-hb-swich">
@@ -65,21 +67,21 @@
                 <a class="cus-guitar-btn btn" href="cus-online.html">立即前往</a>
             </div>
             <div class="cusguitar-element">
-                <img src="img/customGuitarFront.jpg" alt="">
+                <img src="img/customGuitarFront.jpg" alt="pic">
                 <div class="cus-guitar-pic-txt">
                     <h3>線上製作</h3>
                     <p>快速又方便，在家就能製作</p>
                 </div>
             </div>
             <div class="cusguitar-element">
-                <img src="img/customGuitarFront2.jpg" alt="">
+                <img src="img/customGuitarFront2.jpg" alt="pic">
                 <div class="cus-guitar-pic-txt">
                     <h3>客製化選擇</h3>
                     <p>創造您專屬的選擇</p>
                 </div>
             </div>
             <div class="cusguitar-element">
-                <img src="img/customGuitarFront3.jpg" alt="">
+                <img src="img/customGuitarFront3.jpg" alt="pic">
                 <div class="cus-guitar-pic-txt">
                     <h3>職人堅持</h3>
                     <p>讓專業的職人來打造你的吉他</p>
@@ -110,28 +112,28 @@
             <div class="musician">
                 <p class="musician-job">藍調吉他手</p>
                 <div class="pic-wrap">
-                    <a href="video.html"><img src="img/John-Mayer.jpg" alt=""></a>
+                    <a href="video.html"><img src="img/John-Mayer.jpg" alt="pic"></a>
                 </div>
                 <h3 class="musician-name">John Mayer</h3>
             </div>
             <div class="musician">
                 <p class="musician-job">指彈吉他手</p>
                 <div class="pic-wrap">
-                    <a href="video.html"><img src="img/tommy emmanuel main.jpg" alt=""></a>
+                    <a href="video.html"><img src="img/tommy emmanuel main.jpg" alt="pic"></a>
                 </div>
                 <h3 class="musician-name">Tommy Emmanuel</h3>
             </div>
             <div class="musician">
                 <p class="musician-job">指彈吉他手</p>
                 <div class="pic-wrap">
-                    <a href="video.html"><img src="img/sungha.jpg" alt=""></a>
+                    <a href="video.html"><img src="img/sungha.jpg" alt="pic"></a>
                 </div>
                 <h3 class="musician-name">Sungha Jung</h3>
             </div>
             <div class="musician">
                 <p class="musician-job">創作型歌手</p>
                 <div class="pic-wrap">
-                    <a href="video.html"><img src="img/edsheeran.jpg" alt=""></a>
+                    <a href="video.html"><img src="img/edsheeran.jpg" alt="pic"></a>
                 </div>
                 <h3 class="musician-name">Ed Sheeran</h3>
             </div>
@@ -142,7 +144,7 @@
         <div class="store-wrap">
             <div class="store-content">
                 <div class="store-title-wrap">
-                    <a href="store.html"><img src="img/101.jpg" alt=""></a>
+                    <a href="store.html"><img src="img/101.jpg" alt="pic"></a>
 
                 </div>
                 <h3>台北信義店</h3>
@@ -151,7 +153,7 @@
             <div class="store-content">
                 <div class="store-title-wrap">
                     <a href="store.html">
-                        <img src="img/sunmoonlake.jpeg" alt="">
+                        <img src="img/sunmoonlake.jpeg" alt="pic">
                     </a>
 
                 </div>
@@ -160,7 +162,7 @@
             </div>
             <div class="store-content">
                 <div class="store-title-wrap">
-                    <a href="store.html"><img src="img/beautifulisland.jpg" alt=""></a>
+                    <a href="store.html"><img src="img/beautifulisland.jpg" alt="pic"></a>
 
                 </div>
                 <h3>高雄美麗島本店</h3>
