--- a/merch.html
+++ b/merch.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
@@ -26,10 +27,10 @@
                 <div class="header">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="img/logo-only-small.png" alt="">
+                            <img src="img/logo-only-small.png" alt="pic">
                         </a>
                         <a href="index.html">
-                            <img src="img/logo-name-small.png" alt="">
+                            <img src="img/logo-name-small.png" alt="pic">
                         </a>
                     </div>
                     <input type="checkbox" class="header-hb-swich" id="header-hb-swich">
@@ -62,7 +63,7 @@
             <p>The quality and attention to detail on Ernie Ball Music Man instruments is second to none. Our hand-rubbed gunstock oil and wax finished necks are a perfect example.</p>
         </div>
         <div class="merch-detail-pic">
-            <img src="img/details-neck.jpg.pagespeed.ce.jpaob0hI_S.jpg" alt="">
+            <img src="img/details-neck.jpg.pagespeed.ce.jpaob0hI_S.jpg" alt="pic">
         </div>
     </section>
 
@@ -120,7 +121,7 @@
                     <div class="pic-txt">
                         <a href="guitar-detail.html">
                             <div class="pic">
-                                <img src="img/g4.png" alt="">
+                                <img src="img/g4.png" alt="pic">
                             </div>
                         </a>
                         <div class="txt">
@@ -131,7 +132,7 @@
                     <div class="pic-txt">
                         <a href="guitar-detail.html">
                             <div class="pic">
-                                <img src="img/g1.png" alt="">
+                                <img src="img/g1.png" alt="pic">
                             </div>
                         </a>
                         <div class="txt">
@@ -142,7 +143,7 @@
                     <div class="pic-txt">
                         <a href="guitar-detail.html">
                             <div class="pic">
-                                <img src="img/g2.png" alt="">
+                                <img src="img/g2.png" alt="pic">
                             </div>
                         </a>
                         <div class="txt">
@@ -153,7 +154,7 @@
                     <div class="pic-txt">
                         <a href="guitar-detail.html">
                             <div class="pic">
-                                <img src="img/g3.png" alt="">
+                                <img src="img/g3.png" alt="pic">
                             </div>
                         </a>
                         <div class="txt">
@@ -164,7 +165,7 @@
                     <div class="pic-txt">
                         <a href="guitar-detail.html">
                             <div class="pic">
-                                <img src="img/g4.png" alt="">
+                                <img src="img/g4.png" alt="pic">
                             </div>
                         </a>
                         <div class="txt">
@@ -175,7 +176,7 @@
                     <div class="pic-txt">
                         <a href="guitar-detail.html">
                             <div class="pic">
-                                <img src="img/g1.png" alt="">
+                                <img src="img/g1.png" alt="pic">
                             </div>
                         </a>
                         <div class="txt">
@@ -186,7 +187,7 @@
                     <div class="pic-txt">
                         <a href="guitar-detail.html">
                             <div class="pic">
-                                <img src="img/g2.png" alt="">
+                                <img src="img/g2.png" alt="pic">
                             </div>
                         </a>
                         <div class="txt">
@@ -197,7 +198,7 @@
                     <div class="pic-txt">
                         <a href="guitar-detail.html">
                             <div class="pic">
-                                <img src="img/g3.png" alt="">
+                                <img src="img/g3.png" alt="pic">
                             </div>
                         </a>
                         <div class="txt">
@@ -208,7 +209,7 @@
                     <div class="pic-txt">
                         <a href="guitar-detail.html">
                             <div class="pic">
-                                <img src="img/g4.png" alt="">
+                                <img src="img/g4.png" alt="pic">
                             </div>
                         </a>
                         <div class="txt">
