--- a/store.html
+++ b/store.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
@@ -27,10 +28,10 @@
                 <div class="header">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="img/logo-only-small.png" alt="">
+                            <img src="img/logo-only-small.png" alt="pic">
                         </a>
                         <a href="index.html">
-                            <img src="img/logo-name-small.png" alt="">
+                            <img src="img/logo-name-small.png" alt="pic">
                         </a>
                     </div>
                     <input type="checkbox" class="header-hb-swich" id="header-hb-swich">
@@ -63,7 +64,7 @@
         <div class="find-store-content-wrap wrap">
             <div class="find-store-content">
                 <div class="find-store-pic">
-                    <img src="img/468805_10150789165072437_1609780300_o.jpg" alt="">
+                    <img src="img/468805_10150789165072437_1609780300_o.jpg" alt="pic">
                 </div>
                 <div class="find-store-txt">
                     <h3><span>台北信義店</span></h3>
@@ -74,7 +75,7 @@
             </div>
             <div class="find-store-content">
                 <div class="find-store-pic">
-                    <img src="img/Guitar-Online-Shop.jpg" alt="">
+                    <img src="img/Guitar-Online-Shop.jpg" alt="pic">
                 </div>
                 <div class="find-store-txt">
                     <h3><span>台中日月潭店</span></h3>
@@ -85,7 +86,7 @@
             </div>
             <div class="find-store-content">
                 <div class="find-store-pic">
-                    <img src="img/guitar-store--mypixhell.jpg" alt="">
+                    <img src="img/guitar-store--mypixhell.jpg" alt="pic">
                 </div>
                 <div class="find-store-txt">
                     <h3><span>高雄美麗島本店</span></h3>
