--- a/john-mayer.html
+++ b/john-mayer.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
@@ -26,10 +27,10 @@
                 <div class="header">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="img/logo-only-small.png" alt="">
+                            <img src="img/logo-only-small.png" alt="pic">
                         </a>
                         <a href="index.html">
-                            <img src="img/logo-name-small.png" alt="">
+                            <img src="img/logo-name-small.png" alt="pic">
                         </a>
                     </div>
                     <input type="checkbox" class="header-hb-swich" id="header-hb-swich">
@@ -48,7 +49,7 @@
                 </div>
             </header>
     <section class="celebrity-info">
-        <!-- <img src="img/john-mayer-bp.jpg" alt=""> -->
+        <!-- <img src="img/john-mayer-bp.jpg" alt="pic"> -->
         <h1>celebrity</h1>
         <!-- <div class="celebrity-info-title"></div> -->
         <div class="celebrity-info-title">
@@ -65,28 +66,28 @@
         <div class="celebrity-use-title">
             <h2 class="title-decoration">使用的吉他</h2>
         </div>
-        <img src="img/guitar-big-e.jpg" alt="">
+        <img src="img/guitar-big-e.jpg" alt="pic">
         <div class="celebrity-use-marterial">
             <h2>型號規格-<span>DD102</span></h2>
             <div class="material-wrap">
                 <div class="marterial">
                     <h3>面板</h3>
                     <p>
-                        <img src="img/cloud-tree.jpg" alt="">
+                        <img src="img/cloud-tree.jpg" alt="pic">
                         雲衫
                     </p> 
                 </div>
                 <div class="marterial">
                     <h3>測,背板</h3>
                     <p>
-                        <img src="img/heart-tree.jpg" alt="">
+                        <img src="img/heart-tree.jpg" alt="pic">
                         桃花心木
                     </p>
                 </div>
                 <div class="marterial">
                     <h3>指板</h3>
                     <p>
-                        <img src="img/rose-wood.jpg" alt="">
+                        <img src="img/rose-wood.jpg" alt="pic">
                         玫瑰木
                     </p>
                 </div>
