--- a/video.html
+++ b/video.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <title>音樂人試彈</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
@@ -26,10 +27,10 @@
                 <div class="header">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="img/logo-only-small.png" alt="">
+                            <img src="img/logo-only-small.png" alt="pic">
                         </a>
                         <a href="index.html">
-                            <img src="img/logo-name-small.png" alt="">
+                            <img src="img/logo-name-small.png" alt="pic">
                         </a>
                     </div>
                     <input type="checkbox" class="header-hb-swich" id="header-hb-swich">
@@ -63,19 +64,19 @@
         <div class="video-musician-row wrap">
             <a href="john-mayer.html">
                 <div class="video-musician-pic-wrap">
-                    <img src="img/ed.jpg" alt="">
+                    <img src="img/ed.jpg" alt="pic">
                     <h2>Ed Sheeran</h2>
                 </div>
             </a>
             <a href="john-mayer.html">
                 <div class="video-musician-pic-wrap">
-                    <img src="img/sungha.jpg" alt="">
+                    <img src="img/sungha.jpg" alt="pic">
                     <h2>Sungha Jung</h2>
                 </div>
             </a>
             <a href="john-mayer.html">
                 <div class="video-musician-pic-wrap">
-                    <img src="img/John-Mayer.jpg" alt="">
+                    <img src="img/John-Mayer.jpg" alt="pic">
                     <h2>John Mayer</h2>
                 </div>
             </a>
@@ -83,19 +84,19 @@
         <div class="video-musician-row">
             <a href="john-mayer.html">
                 <div class="video-musician-pic-wrap">
-                    <img src="img/sungha.jpg" alt="">
+                    <img src="img/sungha.jpg" alt="pic">
                     <h2>Sungha Jung</h2>
                 </div>
             </a>
             <a href="john-mayer.html">
                 <div class="video-musician-pic-wrap">
-                    <img src="img/John-Mayer.jpg" alt="">
+                    <img src="img/John-Mayer.jpg" alt="pic">
                     <h2>John Mayer</h2>
                 </div>
             </a>
             <a href="john-mayer.html">
                 <div class="video-musician-pic-wrap">
-                    <img src="img/ed.jpg" alt="">
+                    <img src="img/ed.jpg" alt="pic">
                     <h2>Ed Sheeran</h2>
                 </div>
             </a>
@@ -103,19 +104,19 @@
         <div class="video-musician-row">
             <a href="john-mayer.html">
                 <div class="video-musician-pic-wrap">
-                    <img src="img/John-Mayer.jpg" alt="">
+                    <img src="img/John-Mayer.jpg" alt="pic">
                     <h2>John Mayer</h2>
                 </div>
             </a>
             <a href="john-mayer.html">
                 <div class="video-musician-pic-wrap">
-                    <img src="img/ed.jpg" alt="">
+                    <img src="img/ed.jpg" alt="pic">
                     <h2>Ed Sheeran</h2>
                 </div>
             </a>
             <a href="john-mayer.html">
                 <div class="video-musician-pic-wrap">
-                    <img src="img/sungha.jpg" alt="">
+                    <img src="img/sungha.jpg" alt="pic">
                     <h2>Sungha Jung</h2>
                 </div>
             </a>
