add index.html alt

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <a class="btn" href="merch.html">觀看吉他</a>
             </div>
             <div class="new-guitar-pic">
-                <img src="img/guitar-1836655_640.jpg">
+                <img src="img/guitar-1836655_640.jpg" alt="pic">
             </div>
         </div>
     </section>
